policies/allow_list_of_registry/constraint_template.yaml
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
        listKind: K8sAllowedReposList
        plural: k8sallowedrepos
        singular: k8sallowedrepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg, "details": {"rejectedRepo": repo}}] {
          input.review.object.kind == "Pod" // Deployment, StatefulSets, DaemonSets, ReplicaSets
          some i
          image := input.review.object.spec.containers[i].image
          not startswith(image, valid_repo)
          msg := sprintf("image '%v' comes from an unapproved registry", [image])
          repo := image
        }

        valid_repo = allowed[_]
        allowed := {repo | repo := input.parameters.repos[_]}
